// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`store/log/reducer should add the messages to the existing messages 1`] = `
Object {
  "connected": false,
  "messages": Array [
    Array [
      "some messages",
    ],
  ],
}
`;

exports[`store/log/reducer should return the initial state 1`] = `
Object {
  "connected": false,
  "messages": Array [],
}
`;
